--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,14 +8,13 @@
   min-height: 100vh;
 
   .card {
-    width: 100vw;
+    width: 90vw;
     max-width: 760px;
     min-height: 85vh;
     background-color: rgb(17, 24, 39);
     border: solid 1px rgba(167, 139, 250, 0.2);
     border-radius: 10px;
-    margin-top: 3.5rem;
-    margin-bottom: 3.5rem;
+    margin: 3.5rem 1rem;
 
     .header {
       display: flex;
@@ -25,8 +24,6 @@
 
       h1 {
         font-size: 2.25rem;
-        // font-family: "Open Sans", sans-serif;
-        // font-weight: 700;
         background: -webkit-linear-gradient(60deg, #6366f1, #581c87);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -101,13 +98,16 @@
         p {
           font-size: 1rem;
           color: #cbd5e3;
+          inline-size: 260px;
+          overflow-wrap: break-word;
         }
 
         .wallet {
           padding: 0.8rem 1.25rem;
           background-color: #6366f1;
           border-radius: 5px;
-          width: 14vw;
+          max-width: 230px;
+          width: 100%;
           display: flex;
           align-items: center;
           justify-content: center;
