:hammer: :art: :package: Fixing styles and logic for snackbars

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -107,7 +107,7 @@
           background-color: #6366f1;
           border-radius: 5px;
           max-width: 230px;
-          width: 100%;
+          width: fit-content;
           display: flex;
           align-items: center;
           justify-content: center;
